--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/express": "^4.17.13",
 		"concurrently": "^7.3.0",
 		"express": "^4.18.1",
+		"lodash": "^4.17.21",
 		"nodemon": "^2.0.19",
 		"socket.io": "^4.5.1"
 	},
